--- a/index.html
+++ b/index.html
@@ -57,59 +57,37 @@
     }
 
     /* =========================
-       2) WRAPPER FOR SLIDE-UP
-       =========================
-       This wrapper starts off-screen at the bottom
-       and moves into the center with a fade-in.
+       2) BLURRED-BOX UNFOLD
+       ========================= */
+    /*
+      We use "transform: scaleY(0)" + "opacity: 0" initially,
+      then "transform: scaleY(1)" + "opacity: 1" on .fade-in
+      for a smooth "unfolding" effect from the top.
     */
-    #mainBoxWrapper {
-      position: fixed;
-      left: 50%;
-      top: 100%; /* Start below the bottom edge */
-      transform: translateX(-50%);
+    .blurred-box {
+      /* Start folded & transparent */
+      transform: scaleY(0);
+      transform-origin: top center;
       opacity: 0;
-      transition: top 1s ease, opacity 1s ease;
-      z-index: 10;
+      transition: transform 1s ease, opacity 1s ease;
+
+      /* The rest of your styling is inside .blurred-box's children (profile etc.) */
     }
-    #mainBoxWrapper.fade-in {
-      top: 50%; /* Move to vertical center */
+    .blurred-box.fade-in {
+      /* Unfold + fade in */
+      transform: scaleY(1);
       opacity: 1;
-      transform: translate(-50%, -50%);
     }
 
     /* =========================
-       3) THE BOX ITSELF (3D TILT)
-       =========================
-       We'll place the "blurred-box" styles here.
-       It's inside the wrapper, so the wrapper
-       handles the slide; the box handles tilt.
-    */
-    #mainBox {
-      /* Size/styling as needed. 
-         We'll give it "transform-style: preserve-3d"
-         so the 3D rotations are visible.
-      */
+       3) 3D "LOOK AROUND" ON HOVER
+       ========================= */
+    /* We'll enable "preserve-3d" so rotates feel realistic */
+    .blurred-box {
       transform-style: preserve-3d;
-      transition: transform 0.3s ease; /* for tilt smoothing */
-
-      /* Additional styling if you want a background behind the elements:
-         background: rgba(255, 255, 255, 0.1);
-         backdrop-filter: blur(10px);
-         border-radius: 15px;
-         etc.
-      */
     }
-
-    /* Replacing your .blurred-box styles for the child.
-       If you had an actual blurred background here, you can add it below:
-    */
-    .profile-wrapper, .profile-name, .showcase, .icon-wrapper {
-      /* If you want them inside a 'box' visually, 
-         put your background styles in #mainBox above, 
-         or each child, as needed.
-       */
-    }
-
+    /* By default, it's not rotated. We'll rotate it via JS on mousemove. */
+    
     /* =========================
        4) TYPING TEXT
        ========================= */
@@ -230,7 +208,7 @@
   </style>
 </head>
 
-<body>
+<body class="blurred">
   <!-- Background Image -->
   <div class="background"></div>
 
@@ -239,60 +217,57 @@
     <div class="proceed-button" id="proceedButton">click</div>
   </div>
   
-  <!-- WRAPPER that slides from bottom to center -->
-  <div id="mainBoxWrapper">
-    <!-- The box that tilts in 3D -->
-    <div id="mainBox">
-      <div class="profile-wrapper">
-        <div class="profile-decoration"></div>
-        <div class="profile-picture"></div>
+  <!-- Main Blurred Box with Profile Content -->
+  <div class="blurred-box" id="mainBox">
+    <div class="profile-wrapper">
+      <div class="profile-decoration"></div>
+      <div class="profile-picture"></div>
+    </div>
+    <div class="profile-name">jayson</div>
+    <div class="showcase">
+      <div class="badge">
+        <i class="fa-solid fa-car"></i>
+        <span class="tooltip">C8 Corvette</span>
       </div>
-      <div class="profile-name">jayson</div>
-      <div class="showcase">
-        <div class="badge">
-          <i class="fa-solid fa-car"></i>
-          <span class="tooltip">C8 Corvette</span>
-        </div>
-        <div class="badge">
-          <i class="fa-solid fa-wallet"></i>
-          <span class="tooltip">Rich</span>
-        </div>
-        <div class="badge">
-          <i class="fa-solid fa-star" style="color: white;"></i>
-          <span class="tooltip">Certified</span>
-        </div>
+      <div class="badge">
+        <i class="fa-solid fa-wallet"></i>
+        <span class="tooltip">Rich</span>
       </div>
-      <div class="static-text" id="dynamic-text"></div>
-      <div class="icon-wrapper">
-        <a
-          href="https://www.instagram.com/jaysons.lol"
-          class="icon-button"
-          target="_blank"
-        >
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a
-          href="https://www.roblox.com/users/3290769146/profile"
-          class="icon-button"
-          target="_blank"
-        >
-          <i class="fas fa-globe"></i>
-        </a>
-        <a
-          href="https://discord.gg/stupid"
-          class="icon-button"
-          target="_blank"
-        >
-          <i class="fab fa-discord"></i>
-        </a>
-        <a
-          href="https://www.tiktok.com/@umjayson"
-          class="icon-button"
-          target="_blank"
-        >
-          <i class="fab fa-tiktok"></i>
-        </a>
+      <div class="badge">
+        <i class="fa-solid fa-star" style="color: white;"></i>
+        <span class="tooltip">Certified</span>
       </div>
+    </div>
+    <div class="static-text" id="dynamic-text"></div>
+    <div class="icon-wrapper">
+      <a
+        href="https://www.instagram.com/jaysons.lol"
+        class="icon-button"
+        target="_blank"
+      >
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a
+        href="https://www.roblox.com/users/3290769146/profile"
+        class="icon-button"
+        target="_blank"
+      >
+        <i class="fas fa-globe"></i>
+      </a>
+      <a
+        href="https://discord.gg/stupid"
+        class="icon-button"
+        target="_blank"
+      >
+        <i class="fab fa-discord"></i>
+      </a>
+      <a
+        href="https://www.tiktok.com/@umjayson"
+        class="icon-button"
+        target="_blank"
+      >
+        <i class="fab fa-tiktok"></i>
+      </a>
     </div>
   </div>
 
@@ -313,9 +288,9 @@
   </div>
 
   <script>
-    /* ===============================
-       1) ENTER CLICK => SHOW ANIMATIONS
-       =============================== */
+    /* =========================================
+       1) ENTER CLICK => SHOW BLURRED BOX, ETC.
+       ========================================= */
     let hasClicked = false;
     let isMuted = false;
     let lastVolume = 0.5;
@@ -324,8 +299,7 @@
     const overlay          = document.getElementById('overlay');
     const proceedButton    = document.getElementById('proceedButton');
     const background       = document.querySelector('.background');
-    const mainBoxWrapper   = document.getElementById('mainBoxWrapper');
-    const mainBox          = document.getElementById('mainBox');
+    const blurredBox       = document.getElementById('mainBox');
     const volumeControl    = document.getElementById('volumeControl');
 
     function handleEnter() {
@@ -336,12 +310,12 @@
       proceedButton.classList.add('hide-proceed');
       background.classList.add('unblurred');
 
-      // Fade out overlay, then slide & fade in the wrapper
+      // Fade out overlay, then "unfold" the main blurred box
       setTimeout(() => {
         overlay.classList.add('fade-out');
 
-        // Let the wrapper slide from bottom to center
-        mainBoxWrapper.classList.add('fade-in');
+        // Add our "fade-in" class to unfold the .blurred-box
+        blurredBox.classList.add('fade-in');
 
         // Show volume control
         volumeControl.style.display = 'block';
@@ -362,9 +336,9 @@
       });
     }
 
-    /* ===============================
+    /* =========================================
        2) VOLUME CONTROL
-       =============================== */
+       ========================================= */
     const volumeButton = document.getElementById('volumeButton');
     const volumeSlider = document.getElementById('volumeSlider');
 
@@ -401,9 +375,9 @@
       }
     });
 
-    /* ===============================
+    /* =========================================
        3) TYPING TEXT
-       =============================== */
+       ========================================= */
     const phrases = [
       "@@",
       "follow my instagram & roblox",
@@ -451,8 +425,8 @@
        - Otherwise => center
        And "mouseout" => center again
     */
-   mainBox.addEventListener('mousemove', (e) => {
-      const rect = mainBox.getBoundingClientRect();
+    blurredBox.addEventListener('mousemove', (e) => {
+      const rect = blurredBox.getBoundingClientRect();
       const x    = e.clientX - rect.left;
       const y    = e.clientY - rect.top;
 
@@ -483,12 +457,12 @@
 
       // Apply combined rotation
       // We keep scaleY(1) to preserve the "unfolded" state
-     mainBox.style.transform = `scaleY(1) rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
+      blurredBox.style.transform = `scaleY(1) rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
     });
 
     // When mouse leaves the box, snap back to center orientation
-    mainBox.addEventListener('mouseleave', () => {
-     mainBox.style.transform = 'scaleY(1) rotateX(0) rotateY(0)';
+    blurredBox.addEventListener('mouseleave', () => {
+      blurredBox.style.transform = 'scaleY(1) rotateX(0) rotateY(0)';
     });
   </script>
 </body>
