--- a/index.html
+++ b/index.html
@@ -414,19 +414,8 @@
       typePhrase();
     });
 
-    /* =========================================
-       4) 3D "LOOK AROUND" ON HOVER
-       =========================================
-       We'll rotate the .blurred-box in discrete zones:
-       - If mouse is near left => tilt left
-       - If near right => tilt right
-       - If near top => tilt up
-       - If near bottom => tilt down
-       - Otherwise => center
-       And "mouseout" => center again
-    */
-    blurredBox.addEventListener('mousemove', (e) => {
-      const rect = blurredBox.getBoundingClientRect();
+     blurredBox.addEventListener('mousemove', (e) => {
+      const rect =  blurredBox.getBoundingClientRect();
       const x    = e.clientX - rect.left;
       const y    = e.clientY - rect.top;
 
@@ -434,35 +423,30 @@
       const zoneX = x / rect.width;
       const zoneY = y / rect.height;
 
-      // We'll define a threshold area ~ 1/3.
-      // If zoneX < 0.33 => tilt left, > 0.66 => tilt right, else center.
-      // If zoneY < 0.33 => tilt up, > 0.66 => tilt down, else center.
-      // Adjust angles to your preference.
-      let rotateX = 0;
-      let rotateY = 0;
+      let rotateX = 0; // "tilt up/down"
+      let rotateY = 0; // "tilt left/right"
 
-      // Horizontal
+      // Horizontal tilt
       if (zoneX < 0.33) {
-        rotateY = 15;   // tilt left
+        rotateY = 15;  // tilt left
       } else if (zoneX > 0.66) {
-        rotateY = -15;  // tilt right
+        rotateY = -15; // tilt right
       }
 
-      // Vertical
+      // Vertical tilt
       if (zoneY < 0.33) {
-        rotateX = 15;   // tilt "up"
+        rotateX = 15;  // tilt up
       } else if (zoneY > 0.66) {
-        rotateX = -15;  // tilt "down"
+        rotateX = -15; // tilt down
       }
 
-      // Apply combined rotation
-      // We keep scaleY(1) to preserve the "unfolded" state
-      blurredBox.style.transform = `scaleY(1) rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
+      // Apply the combined rotation
+       blurredBox.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
     });
 
     // When mouse leaves the box, snap back to center orientation
     blurredBox.addEventListener('mouseleave', () => {
-      blurredBox.style.transform = 'scaleY(1) rotateX(0) rotateY(0)';
+      blurredBox.style.transform = 'rotateX(0) rotateY(0)';
     });
   </script>
 </body>
